--- a/assignment_3/styles.css
+++ b/assignment_3/styles.css
@@ -1,26 +1,26 @@
 
 /* DO NOT CHANGE THESE STYLES */
-span 
+span
 {
-	display: inline-block;
-	background-color: orange;
-	border: 1px solid black;
-	width:100px;
-	height:100px;
-	padding: 0px;
-	margin: 0px;
+  display: inline-block;
+  background-color: orange;
+  border: 1px solid black;
+  width:100px;
+  height:100px;
+  padding: 0px;
+  margin: 0px;
 }
 
 body
 {
-	height: 10000px; /* this is just to make sure you can scroll */
+  height: 10000px; /* this is just to make sure you can scroll */
 }
 
 div
 {
-	height: 200px;
-	border: 5px solid blue;
-	margin: 10px;
+  height: 200px;
+  border: 5px solid blue;
+  margin: 10px;
 }
 
 /***************************/
@@ -29,41 +29,63 @@ div
 
 /* FIRST ROW : FLOATS; */
 .a1 {
+  float:right;
 }
 
 .b1 {
+  float: left;
 }
 
 .c1 {
+  float: right;
 }
 
 .d1 {
+  float: :left;
 }
 
 /* SECOND ROW : DISPLAY */
 
 .a2 {
+
 }
 
 .b2 {
+  display: none;
 }
 
+
 .c2 {
+display: inline;
 }
 
 .d2 {
+display: block;
 }
 
 /* THIRD ROW : POSITION */
 
 .a3 {
+ position: initial;
 }
 
 .b3 {
+  position: relative;
+  left: 40px;
+  bottom: 50px;
+
 }
 
 .c3 {
+
+  position: fixed;
+  right: 0;
+  bottom: 10px;
 }
 
 .d3 {
+  position: absolute;
+  right: 450px;
+  bottom: 210px;
+
 }
